# nova-packages

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE  README.md  VERSIONING.md
connector-skills/: CHANGELOG.md  PLAN.md  README.md  package-lock.json  package.json
memory-core/: CHANGELOG.md  PLAN.md  README.md  RELEASING.md  RFC-MEMORY-001.md  package-lock.json  package.json
nova-meta-harness/: CHANGELOG.md  README.md  architecture.md  config_nova.yaml  config_text_classification.yaml  pyproject.toml  roadmap.md
nova-meta-harness/docs/: API.md  USAGE.md
nova-meta-harness/nova_meta_harness/: __init__.py  benchmark_client.py  benchmark_nova.py  config_builder.py  diff_parser.py  memory_client.py  nova_llm_bridge.py  nova_text_classification_agent.py  nova_text_classification_benchmark.py  nova_text_classification_llm.py  nova_wrapper.py  orchestrator.py  proposer.py  utils.py
nova-meta-harness/nova_meta_harness/agents/: nova_agressive_memory.py  nova_baseline.py  nova_conservative.py
nova-meta-harness/templates/: domain_spec.md.j2
nova-meta-harness/test_results/AggressiveMemoryAgent/: sentiment.json
nova-meta-harness/test_results/SimpleBaselineAgent/: sentiment.json
nova-meta-harness/tests/: test_config_builder.py  test_diff_parser.py  test_integration.py  test_nova_llm_bridge.py  test_nova_wrapper.py  test_proposer.py  test_text_classification.py
nova-status/: CHANGELOG.md  PLAN.md  README.md  RELEASING.md  RFC-STATUS-001.md  package.json
orchestration-core/: PLAN.md  README.md  package.json
workflow-skills/: CHANGELOG.md  PLAN.md  README.md  (+3 more)
(+132 files in other folders)
